--- a/omnibus-admin/client/.env
+++ b/omnibus-admin/client/.env
@@ -1,8 +1,8 @@
-REACT_APP_FIREBASE_API_KEY=AIzaSyDMlrEAhmIOhX38iDJ61_BrFpRxURHjwMM
-REACT_APP_FIREBASE_AUTH_DOMAIN=mechan-omnibus.firebaseapp.com
-REACT_APP_FIREBASE_DATABASE_URL=https://mechan-omnibus-default-rtdb.europe-west1.firebasedatabase.app
-REACT_APP_FIREBASE_PROJECT_ID=mechan-omnibus
-REACT_APP_FIREBASE_STORAGE_BUCKET=mechan-omnibus.appspot.com
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=1056393577053
-REACT_APP_FIREBASE_APP_ID=1:1056393577053:web:3273c38d935c65f26083b4
-REACT_APP_FIREBASE_MEASUREMENT_ID=G-NFTS6B066K
+VITE_FIREBASE_API_KEY=AIzaSyDMlrEAhmIOhX38iDJ61_BrFpRxURHjwMM
+VITE_FIREBASE_AUTH_DOMAIN=mechan-omnibus.firebaseapp.com
+VITE_FIREBASE_DATABASE_URL=https://mechan-omnibus-default-rtdb.europe-west1.firebasedatabase.app
+VITE_FIREBASE_PROJECT_ID=mechan-omnibus
+VITE_FIREBASE_STORAGE_BUCKET=mechan-omnibus.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=1056393577053
+VITE_FIREBASE_APP_ID=1:1056393577053:web:3273c38d935c65f26083b4
+VITE_FIREBASE_MEASUREMENT_ID=G-NFTS6B066K
