--- a/omnibus-quiz/package.json
+++ b/omnibus-quiz/package.json
@@ -12,6 +12,7 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
     "firebase": "^9.9.4",
+    "graphql-hooks": "^5.11.4",
     "moment": "^2.29.4",
     "path": "^0.12.7",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-hook-form": "^7.34.2",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
+    "uuid": "^9.0.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
